--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,6 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #1b1b1b;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
